# design-pattern

./: .gitignore  CMakeLists.txt  gmon.out  tags
Singleton/: CMakeLists.txt  main.cc
Singleton/src/: CMakeLists.txt  Logger.cc  Singleton.cc
adapt/include/: line.h  vector_object.h
adapt/src/: point.cc
bridge/: main.cc
bridge/include/: vector_renderer.h
chain_of_responsibility/: :wqa
chain_of_responsibility/include/: creature_modifier.h
chain_of_responsibility/src/: creature_modifier.cc  simple_creature.cc
command/: CMakeLists.txt
command/include/: dependent_composit_command.h
command/src/: CMakeLists.txt
composite/: CMakeLists.txt  neuron.iuml
composite/include/: simple_creature.hpp  some_neurons.h
composite/src/: creature.cc  simple_creature.cc
csrc/: CMakeLists.txt
csrc/Singleton/: main.cc
csrc/adapt/: CMakeLists.txt  main.cc
csrc/bridge/: bridge.iuml
csrc/decorator/: decorator.iuml
csrc/facade/: CMakeLists.txt  facade.iuml
csrc/factory/: CMakeLists.txt
csrc/flyweight/: CMakeLists.txt  flyweight.iuml  main.cc
csrc/observer/: CMakeLists.txt
csrc/singleton/: CMakeLists.txt
csrc/state/: CMakeLists.txt
csrc/strategy/: CMakeLists.txt  main.cpp
decorator/: CMakeLists.txt  decorator.iuml  main.cc
decorator/include/: circle.h  colored_shape.h  shape.h  tfunc_logger.h
decorator/src/: CMakeLists.txt  colored_shape.cc  stransparent_shape.cc
docs/: chain_of_responsibility.iuml  command.iuml  composit.iuml  dynamic_strategy.iuml  interpreter.iuml  iterator.iuml  template.iuml
facade/src/: client.cc  logistics.cc
factory/: CMakeLists.txt  main.cc
factory/include/: Point.h  TeaFactory.h
factory/src/: DrinkFactory.cc  PointFactory.cc
factoryMethod/: CMakeLists.txt
factoryMethod/include/: IReaderFactory.h  TextReader.h
factoryMethod/src/: IReader.cpp  TextReader.cpp
flyweight/include/: font_factory.h
flyweight/src/: CMakeLists.txt  font.cc
interpreter/: main.cc
interpreter/include/: integer.h  utils.h
mediator/: CMakeLists.txt  mediator.iuml
mediator/include/: person.h
observer/: CMakeLists.txt
observer/include/: Form.h  MainForm.h  observer.h  person_listener.h
observer/src/: CMakeLists.txt  IProgress.cpp
proxy/: virtual_proxy.iuml
proxy/include/: lazy_bitmap.h
proxy/src/: lazy_bitmap.cc
refactor/include/: Library.h
refactor/src/: Library.cpp  Library_o.cpp
src/: CMakeLists.txt  tags
src/bridge/: CMakeLists.txt
src/chain_of_responsibility/: CMakeLists.txt  main.cc
src/command/: main.cc
src/composite/: main.cc
src/proxy/: main.cc  (+1 more)
src/strategy/src/: CMakeLists.txt  CurrencyRate_o.cpp  ICurrencyStrategy.cpp  RussiaCurrencyStrategy.cpp  RussiaCurrencyStratrgyFactory.cpp  USCurrencyStrategyFactory.cpp  html_liststrategy.cc  markdown_liststrategy.cc  text_processor.cc
state/: CMakeLists.txt  state.iuml
strategy/: CMakeLists.txt  README.md  main.cpp
test/: CMakeLists.txt
test/src/: test_singleton.cc  test_state.cc
(+198 files in other folders)
